--- a/index.html
+++ b/index.html
@@ -19,12 +19,48 @@
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <main>
+      <header class="main-header">
+        <h2>Reliable, efficient delivery</h2>
+        <h1>Powered by Technology</h1>
+        <p>
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </header>
+      <div class="main-content">
+        <article>
+          <header>Supervisor</header>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="magnifier icon" />
+        </article>
+        <article>
+          <header>Team Builder</header>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img src="images/icon-team-builder.svg" alt="team builder icon" />
+        </article>
+        <article>
+          <header>Karma</header>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="lamp icon" />
+        </article>
+        <article>
+          <header>Calculator</header>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img src="images/icon-calculator.svg" alt="calculator icon" />
+        </article>
+      </div>
+      <!-- Reliable, efficient delivery Powered by Technology Our Artificial
+      Intelligence powered tools use millions of project data points to ensure
+      that your project is successful  Monitors activity to identify
+      project roadblocks Team Builder Scans our talent network to create the
+      optimal team for your project Karma Regularly evaluates our talent to
+      ensure quality Calculator Uses data from past projects to provide better
+      delivery estimates -->
+    </main>
   </body>
 </html>
